z-index fixes to ensure the status bar items aren't weirdly overlayed

--- a/hypha/static_src/src/sass/apply/components/_messages.scss
+++ b/hypha/static_src/src/sass/apply/components/_messages.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 25;
+    z-index: 30;
     pointer-events: none;
 
     &__actions {
